--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11, 3.12]  # 원하는 버전
+        python-version: ["3.9", "3.10", "3.11", "3.12"]  # 원하는 버전
 
     steps:
       - uses: actions/checkout@v4
